--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel": "^6.23.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
+    "create-react-app": "^1.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "framer": "^2.2.1",
@@ -25,7 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
