--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "node": "^19.0.1",
+    "nvm": "^0.0.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-awesome-styled-grid": "^3.1.4",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "serve-favicon": "^2.5.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
