--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb+srv://admon:3q2z1.@swe.kmdzn0d.mongodb.net/mern-infrastructure?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://admon:3q2z1.@swe.kmdzn0d.mongodb.net/Foodie?retryWrites=true&w=majority
 
 SECRET=arandomsecretkeygoesinthisspace
 
