--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "framer": "^2.2.1",
+    "framer-motion": "^7.6.5",
     "jquery": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
