--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "mern-infrastructure",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "@splidejs/splide": "^4.1.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@splidejs/splide": "github:splidejs/splide",
     "babel": "^6.23.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
-    "create-react-app": "^1.2.1",
+    "create-react-app": "^5.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "favicon": "^0.0.2",
+    "framer": "^2.2.1",
+    "framer-motion": "^6.5.1",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
-    "node": "^19.0.1",
+    "node": "^18.10.0",
+    "nodemon": "^2.0.20",
     "nvm": "^0.0.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
@@ -26,21 +25,16 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "^5.0.1",
+    "serve-favicon": "^2.5.0",
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -54,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:3001"
+  "proxy": "http://localhost:3001"
 }
